src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>SR_Email_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Email Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Students_Rebuild_Info__c</fullName>
        <description>Students Rebuild Info for Email Merging</description>
        <label>Students Rebuild Info</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Students_Rebuild_Team_Name__c</fullName>
        <label>Students Rebuild Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>